# SS6PlayerForCPP

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/workflows/: mac.yml  win.yml
conf/OpenGL/: ToolChain.cmake
samples/: knight.ssfb2
scripts/: release_macos.sh  release_win.ps1  win_vs.bat  win_vs_custom.bat
src/: CMakeLists.txt
src/Application/: CMakeLists.txt
src/Application/OpenGL/: application.cpp  application.h  config.h.in  main.cpp
src/Common/: ssfb2_generated.h
src/Common/Entity/: ss6player_entity.cpp  ss6player_entity.h  ss6player_entity_effect.cpp  ss6player_entity_effect.h  ss6player_entity_effect_function_animation.cpp  ss6player_entity_effect_function_animation.h  ss6player_entity_effect_function_cell.cpp  ss6player_entity_effect_function_cell.h  ss6player_entity_effect_function_misc.cpp  ss6player_entity_effect_function_misc.h  ss6player_entity_effect_function_parts.cpp  ss6player_entity_effect_function_parts.h  ss6player_entity_function_animation.cpp  ss6player_entity_function_animation.h  ss6player_entity_function_cell.cpp  ss6player_entity_function_cell.h  ss6player_entity_function_misc.cpp  ss6player_entity_function_misc.h  ss6player_entity_function_parts.cpp  ss6player_entity_function_parts.h  ss6player_entity_function_track.cpp  ss6player_entity_function_track.h  ss6player_entity_replicate.cpp  ss6player_entity_replicate.h
src/Common/PrimitiveBatcher/: ss6player_primitive_batcher.cpp  ss6player_primitive_batcher.h
src/Common/Project/: ss6player_project.cpp  ss6player_project.h
src/Common/Sequencer/: ss6player_sequencer.cpp  ss6player_sequencer.h
src/Platform/00/: ss6player_file.h
src/Platform/OpenGL/: ss6player_buffer.cpp  ss6player_buffer.h  ss6player_file.cpp  ss6player_file.h  ss6player_gpu_resource_cache.h  ss6player_memory.cpp  ss6player_memory.h  ss6player_platform.h  ss6player_renderer.cpp  ss6player_renderer.h  ss6player_shader.cpp  ss6player_shader.h  ss6player_system.cpp  ss6player_system.h  ss6player_texture.cpp  ss6player_texture.h  ss6player_types.cpp  ss6player_types.h
src/Platform/OpenGL/OSS/GLFW/: Dummy.txt
src/Shader/OpenGL/src/: ss6player_standard.fs  ss6player_standard.vs  ss6player_standard_mask.fs
tests/: CMakeLists.txt  main.cpp
tests/Common/Project/: ss6player_project.t.cpp
tests/Common/Sequencer/: ss6player_sequencer.t.cpp
